--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
-
+Frontend_spec.md
 
 # Local History for Visual Studio Code
 .history/
